app/assets/stylesheets/forest/partials/_media_item_thumbnail.scss
// Media Item Thumbnail

.media-library {
  .media-item--grid__button__remove {
    display: none;
  }
}

.media-item--grid__image {
  position: relative;
  background-color: $light-gray;
  background-position: 50% calc(50% - 14px) !important;
}

.media-item--grid__video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.media-item--grid__label {
  padding: 5px;
  position: absolute;
  bottom: 0;
  left: 0;
  background: white;
  margin-bottom: 0;
  width: 100%;
  text-align: center;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  z-index: 1;
}

.media-library-link {
  overflow: hidden;
  position: relative;
  display: block;
}

.media-library-link--selected {
  &:before {
    content: '';
    background-image: image-url('bootstrap/check.svg');
    background-color: $white;
    border: 1px solid #ced4da;
    background-size: cover;
    background-position: center center;
    position: absolute;
    width: 1.6rem;
    height: 1.6rem;
    top: -0.5em;
    right: 0;
    z-index: 1;
    font-size: 14px;
    box-sizing: content-box;
    border-radius: 3px;
    color: white;
  }

  &:hover {
    &:before {
      background-image: image-url('bootstrap/x.svg');
    }
  }
}

.media-item--grid {
  &:hover {
    .media-item--grid__buttons {
      display: flex;
    }
  }
}

.media-item--grid__buttons {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
}

.media-item__button {
  width: 1.2em;
  height: 1.2em;
  top: -0.5em;
  right: 0;
  z-index: 1;
  font-size: 14px;
  padding: 4px;
  box-sizing: content-box;
  border-radius: 3px;
  color: white;
  background-color: $white;
  border: 1px solid #ced4da;
  cursor: pointer;
  opacity: 0.8;

  &:hover {
    background-color: $white;
    border: 1px solid #ced4da;
    opacity: 1;
  }

  & + .media-item__button {
    margin-left: 4px;
  }
}

.modal {
  .media-item--grid__buttons {
    display: none !important;
  }
}

.media-gallery-preview {
  .media-library-link {
    cursor: move;
  }
}

.media-item--grid__icon {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, calc(-50% - 14px));
  opacity: 0.5;
  z-index: 1;

  &:before {
    width: 60px;
    height: 60px;
    background-size: contain;
    background-color: transparent;
  }

  &.glyphicon-invert {
    opacity: 0.8;
    filter: invert(1);
  }
}

.media-library-image--list {
  width: 50px;
  height: 50px;
  background-size: cover;
  background-position: center center;
}

